[gd_scene load_steps=54 format=3 uid="uid://d2tjqqxwlvxhv"]

[ext_resource type="Texture2D" uid="uid://cifodnot66paj" path="res://Sprites/tileset.png" id="1_fvcdt"]
[ext_resource type="Script" path="res://Scripts/tile_map.gd" id="2_3ydf0"]
[ext_resource type="Script" path="res://Scripts/path.gd" id="3_a6c0i"]
[ext_resource type="Texture2D" uid="uid://b7t1i6tlilnky" path="res://Sprites/pentagram.png" id="3_bx1hb"]
[ext_resource type="Script" path="res://Scripts/waveManager.gd" id="5_qm1p7"]
[ext_resource type="Script" path="res://Scripts/base.gd" id="5_twyjn"]
[ext_resource type="Resource" uid="uid://b53dejrkpfguh" path="res://Resources/Waves/wave1.tres" id="6_koh35"]
[ext_resource type="Resource" uid="uid://c72pynku30i7t" path="res://Resources/Waves/wave2.tres" id="7_wfsct"]
[ext_resource type="Texture2D" uid="uid://ll0aa8n1vdej" path="res://Sprites/base_fill.png" id="9_folpg"]
[ext_resource type="Texture2D" uid="uid://dv243t0idohw0" path="res://Sprites/tutorial.png" id="10_nse6r"]
[ext_resource type="Texture2D" uid="uid://umeak6oiy5n2" path="res://Sprites/wavenumber.png" id="11_8w5if"]
[ext_resource type="Texture2D" uid="uid://dn5mi608q3sip" path="res://Sprites/cultist1.png" id="13_5krdy"]
[ext_resource type="Texture2D" uid="uid://dqt0xqtb20v8n" path="res://Sprites/cultist3.png" id="13_btv12"]
[ext_resource type="Texture2D" uid="uid://g75qoiioud13" path="res://Sprites/game_over2.png" id="13_cifyv"]
[ext_resource type="Texture2D" uid="uid://bnj8mnlnr3d2f" path="res://Sprites/cultist2.png" id="14_rq8aa"]
[ext_resource type="Texture2D" uid="uid://dblawom4c2fig" path="res://Sprites/mute.png" id="16_i6uom"]
[ext_resource type="Script" path="res://Scripts/mute.gd" id="16_l8456"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4dqkd"]
texture = ExtResource("1_fvcdt")
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/animation_frame_0/duration = 0.5
23:0/animation_frame_1/duration = 0.5
23:0/animation_frame_2/duration = 0.5
23:0/animation_frame_3/duration = 0.5
23:0/animation_frame_4/duration = 0.5
23:0/animation_frame_5/duration = 0.5
23:0/0 = 0
29:0/0 = 0

[sub_resource type="TileSet" id="TileSet_dtjhr"]
custom_data_layer_0/name = "buildable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_4dqkd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13hf6"]
size = Vector2(8, 8)

[sub_resource type="Curve2D" id="Curve2D_i0p7b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 424, 306, 0, 0, 0, 0, 424, 250, 0, 0, 0, 0, 313, 249, 0, 0, 0, 0, 311, 216, 0, 0, 0, 0, 457, 217, 0, 0, 0, 0, 455, 169, 0, 0, 0, 0, 264, 168, 0, 0, 0, 0, 265, 155)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_n7hfa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 299, 16, 0, 0, 0, 0, 298, 84, 0, 0, 0, 0, 331, 83, 0, 0, 0, 0, 331, 51, 0, 0, 0, 0, 395, 51, 0, 0, 0, 0, 394, 130, 0, 0, 0, 0, 235, 130, 0, 0, 0, 0, 234, 156)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_lvk8q"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -24, 275, 0, 0, 0, 0, 78, 274, 0, 0, 0, 0, 77, 196, 0, 0, 0, 0, 29, 196, 0, 0, 0, 0, 29, 244, 0, 0, 0, 0, 206, 243, 0, 0, 0, 0, 205, 184)
}
point_count = 7

[sub_resource type="CircleShape2D" id="CircleShape2D_puy3a"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twsgq"]
size = Vector2(66, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_tevho"]
atlas = ExtResource("14_rq8aa")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4wqw"]
atlas = ExtResource("14_rq8aa")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0nta"]
atlas = ExtResource("14_rq8aa")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2vs0"]
atlas = ExtResource("14_rq8aa")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb6fp"]
atlas = ExtResource("14_rq8aa")
region = Rect2(120, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_evmqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tevho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4wqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0nta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2vs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb6fp")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gp6fo"]
atlas = ExtResource("13_btv12")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0gfy"]
atlas = ExtResource("13_btv12")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o3pc"]
atlas = ExtResource("13_btv12")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh3gk"]
atlas = ExtResource("13_btv12")
region = Rect2(90, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_8dk16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp6fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0gfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o3pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh3gk")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_klri0"]
atlas = ExtResource("13_btv12")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1350"]
atlas = ExtResource("13_btv12")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxwuy"]
atlas = ExtResource("13_btv12")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc0xm"]
atlas = ExtResource("13_btv12")
region = Rect2(90, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_plu1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klri0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1350")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxwuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc0xm")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_74sbw"]
atlas = ExtResource("13_5krdy")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts4h4"]
atlas = ExtResource("13_5krdy")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpw2r"]
atlas = ExtResource("13_5krdy")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tptn6"]
atlas = ExtResource("13_5krdy")
region = Rect2(90, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_claj0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74sbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts4h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpw2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tptn6")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dsi4a"]
atlas = ExtResource("14_rq8aa")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkam1"]
atlas = ExtResource("14_rq8aa")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmhjm"]
atlas = ExtResource("14_rq8aa")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffm3c"]
atlas = ExtResource("14_rq8aa")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t3mv"]
atlas = ExtResource("14_rq8aa")
region = Rect2(120, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_58k83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsi4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkam1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmhjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffm3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t3mv")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w8gsx"]
radius = 8.0

[node name="MainScene" type="Node2D"]

[node name="TileMap" type="TileMap" parent="." node_paths=PackedStringArray("indicator", "tutorial1", "tutorial2")]
tile_set = SubResource("TileSet_dtjhr")
format = 2
layer_0/name = "Base"
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(1, 1507328, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 6, 0, 0, 7, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 524300, 0, 0, 524299, 1507328, 0, 524298, 0, 0, 524297, 0, 0, 524296, 0, 0, 524295, 0, 0, 524294, 0, 0, 524293, 0, 0, 524292, 0, 0, 524291, 0, 0, 524290, 0, 0, 524289, 0, 0, 524288, 0, 0, 458752, 0, 0, 393216, 1507328, 0, 327680, 0, 0, 262144, 0, 0, 196608, 0, 0, 131072, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 1507328, 0, 393225, 1507328, 0, 327689, 0, 0, 262153, 1507328, 0, 196617, 0, 0, 131081, 0, 0, 65545, 1507328, 0, 65544, 1507328, 0, 65543, 1507328, 0, 65542, 1507328, 0, 65541, 1507328, 0, 65540, 1507328, 0, 65539, 1507328, 0, 65538, 1507328, 0, 65537, 1507328, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 1507328, 0, 458753, 0, 0, 458754, 1507328, 0, 393218, 1507328, 0, 327682, 0, 0, 262146, 1507328, 0, 196610, 1507328, 0, 131074, 1507328, 0, 131075, 0, 0, 196611, 0, 0, 262147, 1507328, 0, 327683, 0, 0, 393219, 1507328, 0, 458755, 0, 0, 458756, 0, 0, 393220, 1507328, 0, 327684, 1507328, 0, 262148, 1507328, 0, 196612, 0, 0, 131076, 0, 0, 131077, 1507328, 0, 196613, 1507328, 0, 262149, 1507328, 0, 327685, 1507328, 0, 393221, 1507328, 0, 458757, 0, 0, 458758, 0, 0, 393222, 1507328, 0, 327686, 0, 0, 262150, 1507328, 0, 196614, 1507328, 0, 131078, 0, 0, 131079, 1507328, 0, 196615, 1507328, 0, 262151, 1507328, 0, 327687, 0, 0, 393223, 1507328, 0, 458759, 0, 0, 458760, 0, 0, 393224, 1507328, 0, 327688, 0, 0, 262152, 1507328, 0, 196616, 0, 0, 131080, 0, 0, 458761, 0, 0, 458762, 0, 0, 393226, 1507328, 0, 327690, 0, 0, 262154, 1507328, 0, 196618, 0, 0, 131082, 0, 0, 65546, 1507328, 0, 65547, 1507328, 0, 131083, 1507328, 0, 196619, 1507328, 0, 262155, 1507328, 0, 327691, 1507328, 0, 393227, 1507328, 0, 458763, 1507328, 0, 458764, 0, 0, 393228, 0, 0, 327692, 0, 0, 262156, 1507328, 0, 196620, 0, 0, 131084, 0, 0, 65548, 1507328, 0, 65549, 1507328, 0, 131085, 1507328, 0, 196621, 1507328, 0, 262157, 1507328, 0, 327693, 0, 0, 589838, 65536, 0, 655374, 65536, 0, 720910, 65536, 0, 786446, 65536, 0, 851982, 65536, 0, 917518, 65536, 0, 983054, 65536, 0, 1048590, 65536, 0, 1048589, 65536, 0, 1048588, 65536, 0, 1048587, 65536, 0, 1048586, 65536, 0, 1048585, 65536, 0, 1048584, 65536, 0, 1048583, 65536, 0, 1048582, 65536, 0, 1048581, 65536, 0, 1048580, 65536, 0, 1048579, 65536, 0, 1048578, 65536, 0, 1048577, 65536, 0, 1048576, 65536, 0, 983040, 65536, 0, 917504, 65536, 0, 851968, 65536, 0, 786432, 65536, 0, 720896, 65536, 0, 655360, 65536, 0, 589824, 65536, 0, 589825, 65536, 0, 589826, 65536, 0, 589827, 65536, 0, 589828, 65536, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 65536, 0, 589833, 65536, 0, 589834, 65536, 0, 589835, 65536, 0, 589836, 65536, 0, 589837, 65536, 0, 786441, 65536, 0, 720905, 65536, 0, 655369, 65536, 0, 655368, 65536, 0, 655367, 65536, 0, 655366, 65536, 0, 655365, 65536, 0, 655364, 65536, 0, 655363, 65536, 0, 655362, 65536, 0, 655361, 65536, 0, 720897, 65536, 0, 786433, 65536, 0, 851969, 65536, 0, 917505, 65536, 0, 983041, 65536, 0, 983042, 65536, 0, 917506, 65536, 0, 851970, 65536, 0, 786434, 65536, 0, 720898, 65536, 0, 720899, 65536, 0, 786435, 65536, 0, 851971, 65536, 0, 917507, 65536, 0, 983043, 65536, 0, 983044, 65536, 0, 917508, 65536, 0, 851972, 65536, 0, 786436, 65536, 0, 720900, 65536, 0, 720901, 65536, 0, 786437, 65536, 0, 851973, 65536, 0, 917509, 65536, 0, 983045, 65536, 0, 983046, 65536, 0, 917510, 65536, 0, 851974, 65536, 0, 786438, 65536, 0, 720902, 65536, 0, 720903, 65536, 0, 786439, 65536, 0, 851975, 65536, 0, 917511, 65536, 0, 983047, 65536, 0, 983048, 65536, 0, 917512, 65536, 0, 851976, 65536, 0, 786440, 65536, 0, 720904, 65536, 0, 851977, 65536, 0, 917513, 65536, 0, 983049, 65536, 0, 983050, 65536, 0, 917514, 65536, 0, 851978, 65536, 0, 786442, 65536, 0, 720906, 65536, 0, 655370, 65536, 0, 655371, 65536, 0, 720907, 65536, 0, 786443, 65536, 0, 851979, 65536, 0, 917515, 65536, 0, 983051, 65536, 0, 983052, 65536, 0, 917516, 65536, 0, 851980, 65536, 0, 786444, 65536, 0, 720908, 65536, 0, 655372, 65536, 0, 655373, 65536, 0, 720909, 65536, 0, 786445, 65536, 0, 851981, 65536, 0, 917517, 65536, 0, 983053, 65536, 0, 524303, 131072, 0, 524304, 131072, 0, 524305, 131072, 0, 524306, 131072, 0, 524307, 131072, 0, 524308, 131072, 0, 524309, 131072, 0, 524310, 131072, 0, 524311, 131072, 0, 524312, 131072, 0, 524313, 131072, 0, 524314, 131072, 0, 524315, 131072, 0, 524316, 131072, 0, 524317, 131072, 0, 458781, 131072, 0, 393245, 131072, 0, 327709, 131072, 0, 262173, 131072, 0, 196637, 131072, 0, 131101, 131072, 0, 65565, 131072, 0, 29, 131072, 0, 15, 131072, 0, 16, 131072, 0, 17, 131072, 0, 18, 131072, 0, 19, 131072, 0, 20, 131072, 0, 21, 131072, 0, 22, 131072, 0, 23, 131072, 0, 24, 131072, 0, 25, 131072, 0, 26, 131072, 0, 27, 131072, 0, 28, 131072, 0, 65551, 131072, 0, 131087, 131072, 0, 196623, 131072, 0, 262159, 131072, 0, 327695, 131072, 0, 393231, 131072, 0, 458767, 131072, 0, 196629, 131072, 0, 131093, 131072, 0, 65557, 131072, 0, 65556, 131072, 0, 65555, 131072, 0, 65554, 131072, 0, 65553, 131072, 0, 65552, 131072, 0, 131088, 131072, 0, 196624, 131072, 0, 262160, 131072, 0, 327696, 131072, 0, 393232, 131072, 0, 458768, 131072, 0, 458769, 131072, 0, 393233, 131072, 0, 327697, 131072, 0, 262161, 131072, 0, 196625, 131072, 0, 131089, 131072, 0, 131090, 131072, 0, 196626, 131072, 0, 262162, 131072, 0, 327698, 131072, 0, 393234, 131072, 0, 458770, 131072, 0, 458771, 131072, 0, 393235, 131072, 0, 327699, 131072, 0, 262163, 131072, 0, 196627, 131072, 0, 131091, 131072, 0, 131092, 131072, 0, 196628, 131072, 0, 262164, 131072, 0, 327700, 131072, 0, 393236, 131072, 0, 458772, 131072, 0, 458773, 131072, 0, 393237, 131072, 0, 327701, 131072, 0, 262165, 131072, 0, 262166, 131072, 0, 196630, 131072, 0, 131094, 131072, 0, 65558, 131072, 0, 65559, 131072, 0, 131095, 131072, 0, 196631, 131072, 0, 262167, 131072, 0, 327703, 131072, 0, 327702, 131072, 0, 393238, 131072, 0, 458774, 131072, 0, 458775, 131072, 0, 393239, 131072, 0, 393240, 131072, 0, 327704, 131072, 0, 262168, 131072, 0, 196632, 131072, 0, 131096, 131072, 0, 65560, 131072, 0, 65561, 131072, 0, 131097, 131072, 0, 196633, 131072, 0, 262169, 131072, 0, 327705, 131072, 0, 393241, 131072, 0, 458777, 131072, 0, 458776, 131072, 0, 458778, 131072, 0, 393242, 131072, 0, 327706, 131072, 0, 262170, 131072, 0, 196634, 131072, 0, 131098, 131072, 0, 65562, 131072, 0, 65563, 131072, 0, 131099, 131072, 0, 196635, 131072, 0, 262171, 131072, 0, 327707, 131072, 0, 393243, 131072, 0, 458779, 131072, 0, 458780, 131072, 0, 393244, 131072, 0, 327708, 131072, 0, 262172, 131072, 0, 196636, 131072, 0, 131100, 131072, 0, 65564, 131072, 0, 851993, 262144, 0, 786457, 262144, 0, 720921, 262144, 0, 655385, 262144, 0, 589849, 262144, 0, 589848, 262144, 0, 589847, 262144, 0, 589846, 262144, 0, 589845, 262144, 0, 589844, 262144, 0, 589843, 262144, 0, 589842, 262144, 0, 589841, 262144, 0, 589840, 262144, 0, 589839, 262144, 0, 655375, 262144, 0, 720911, 262144, 0, 786447, 262144, 0, 851983, 262144, 0, 917519, 262144, 0, 983055, 262144, 0, 1048591, 262144, 0, 1048592, 262144, 0, 983056, 262144, 0, 917520, 262144, 0, 851984, 262144, 0, 786448, 262144, 0, 720912, 262144, 0, 655376, 262144, 0, 655377, 262144, 0, 720913, 262144, 0, 786449, 262144, 0, 851985, 262144, 0, 917521, 262144, 0, 983057, 262144, 0, 1048593, 262144, 0, 1048594, 262144, 0, 983058, 262144, 0, 917522, 262144, 0, 851986, 262144, 0, 786450, 262144, 0, 720914, 262144, 0, 655378, 262144, 0, 655379, 262144, 0, 720915, 262144, 0, 786451, 262144, 0, 851987, 262144, 0, 917523, 262144, 0, 983059, 262144, 0, 1048595, 262144, 0, 1048596, 262144, 0, 983060, 262144, 0, 917524, 262144, 0, 851988, 262144, 0, 786452, 262144, 0, 720916, 262144, 0, 655380, 262144, 0, 655381, 262144, 0, 720917, 262144, 0, 786453, 262144, 0, 851989, 262144, 0, 917525, 262144, 0, 983061, 262144, 0, 1048597, 262144, 0, 1048598, 262144, 0, 983062, 262144, 0, 917526, 262144, 0, 851990, 262144, 0, 786454, 262144, 0, 720918, 262144, 0, 655382, 262144, 0, 655383, 262144, 0, 720919, 262144, 0, 786455, 262144, 0, 851991, 262144, 0, 917527, 262144, 0, 983063, 262144, 0, 1048599, 262144, 0, 1048600, 262144, 0, 983064, 262144, 0, 917528, 262144, 0, 851992, 262144, 0, 786456, 262144, 0, 720920, 262144, 0, 655384, 262144, 0, 917529, 262144, 0, 983065, 262144, 0, 1048601, 262144, 0, 1048602, 262144, 0, 983066, 262144, 0, 917530, 262144, 0, 851994, 262144, 0, 786458, 262144, 0, 720922, 262144, 0, 655386, 262144, 0, 589850, 262144, 0, 589851, 262144, 0, 655387, 262144, 0, 720923, 262144, 0, 786459, 262144, 0, 851995, 262144, 0, 917531, 262144, 0, 983067, 262144, 0, 1048603, 262144, 0, 1048604, 262144, 0, 983068, 262144, 0, 917532, 262144, 0, 851996, 262144, 0, 786460, 262144, 0, 720924, 262144, 0, 655388, 262144, 0, 589852, 262144, 0, 589853, 262144, 0, 655389, 262144, 0, 720925, 262144, 0, 786461, 262144, 0, 851997, 262144, 0, 917533, 262144, 0, 983069, 262144, 0, 1048605, 262144, 0, 1114112, 65536, 0, 1114113, 65536, 0, 1114116, 65536, 0, 1114117, 65536, 0, 1114118, 65536, 0, 1114119, 65536, 0, 1114120, 65536, 0, 1114121, 65536, 0, 1114126, 65536, 0, 1114125, 65536, 0, 1114124, 65536, 0, 1114123, 65536, 0, 1114122, 65536, 0, 1114115, 65536, 0, 1114114, 65536, 0, 1114127, 262144, 0, 1114128, 262144, 0, 1114129, 262144, 0, 1114130, 262144, 0, 1114131, 262144, 0, 1114132, 262144, 0, 1114133, 262144, 0, 1114134, 262144, 0, 1114135, 262144, 0, 1114136, 262144, 0, 1114137, 262144, 0, 1114138, 262144, 0, 1114139, 262144, 0, 1114140, 262144, 0, 1114141, 262144, 0, 5, 1507328, 0, 393229, 0, 0, 393230, 1900544, 0, 458766, 1900544, 0, 524302, 1900544, 0, 524301, 1900544, 0, 458765, 1900544, 0, 0, 1507328, 0, 65536, 1507328, 0)
layer_1/name = "Top"
layer_1/navigation_enabled = false
layer_1/tile_data = PackedInt32Array(1048602, 327680, 0, 983066, 458752, 0, 983065, 393216, 0, 983064, 393216, 0, 983063, 393216, 0, 983062, 393216, 0, 983061, 393216, 0, 983060, 393216, 0, 983059, 589824, 0, 917523, 327680, 0, 851987, 655360, 0, 851988, 393216, 0, 851989, 393216, 0, 851990, 393216, 0, 851991, 393216, 0, 851992, 393216, 0, 851993, 393216, 0, 851994, 393216, 0, 851995, 393216, 0, 851996, 524288, 0, 786460, 327680, 0, 720924, 327680, 0, 655376, 393216, 0, 1114138, 327680, 0, 196628, 917504, 0, 196629, 720896, 0, 196630, 851968, 0, 131094, 196608, 0, 65558, 983040, 0, 65559, 720896, 0, 65560, 720896, 0, 65561, 720896, 0, 131098, 196608, 0, 196634, 196608, 0, 262170, 196608, 0, 327706, 196608, 0, 65562, 786432, 0, 393242, 851968, 0, 393241, 720896, 0, 393240, 720896, 0, 393239, 720896, 0, 393238, 720896, 0, 393237, 720896, 0, 393236, 720896, 0, 393235, 720896, 0, 393234, 720896, 0, 393233, 720896, 0, 983040, 1114112, 0, 983041, 1114112, 0, 983042, 1114112, 0, 983043, 1114112, 0, 983044, 1114112, 0, 983045, 1310720, 0, 917509, 1048576, 0, 851973, 1179648, 0, 786437, 1048576, 0, 720901, 1048576, 0, 655365, 1245184, 0, 655364, 1114112, 0, 655363, 1114112, 0, 720898, 1048576, 0, 655362, 1441792, 0, 786434, 1048576, 0, 851970, 1376256, 0, 851971, 1114112, 0, 851972, 1114112, 0, 851974, 1114112, 0, 851975, 1114112, 0, 851976, 1114112, 0, 851977, 1114112, 0, 851978, 1114112, 0, 851979, 1114112, 0, 851980, 1114112, 0, 851981, 1310720, 0, 786445, 1048576, 0, 720909, 1048576, 0, 655373, 1048576, 0, 655388, 458752, 0, 655387, 393216, 0, 655386, 393216, 0, 655385, 393216, 0, 655384, 393216, 0, 655383, 393216, 0, 655382, 393216, 0, 655381, 393216, 0, 655380, 393216, 0, 655379, 393216, 0, 655378, 393216, 0, 655377, 393216, 0, 20, 196608, 0, 65556, 196608, 0, 131092, 196608, 0, 458768, 196608, 0, 393232, 983040, 0)
script = ExtResource("2_3ydf0")
indicator = NodePath("Indicator")
tutorial1 = NodePath("../Tutorial")
tutorial2 = NodePath("../Base/Tutorial3")

[node name="Indicator" type="Area2D" parent="TileMap"]
visible = false
z_index = 2

[node name="HellSprite" type="Sprite2D" parent="TileMap/Indicator"]
texture = ExtResource("3_bx1hb")

[node name="SummonSprite1" type="Sprite2D" parent="TileMap/Indicator"]
position = Vector2(240, 0)
texture = ExtResource("3_bx1hb")

[node name="SummonSprite2" type="Sprite2D" parent="TileMap/Indicator"]
position = Vector2(0, 144)
texture = ExtResource("3_bx1hb")

[node name="SummonSprite3" type="Sprite2D" parent="TileMap/Indicator"]
position = Vector2(240, 144)
texture = ExtResource("3_bx1hb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Indicator"]
shape = SubResource("RectangleShape2D_13hf6")

[node name="WaveManager" type="Area2D" parent="."]
script = ExtResource("5_qm1p7")
waves = Array[Resource("res://Scripts/wave.gd")]([ExtResource("6_koh35"), ExtResource("7_wfsct")])

[node name="Path1" type="Path2D" parent="WaveManager"]
curve = SubResource("Curve2D_i0p7b")
script = ExtResource("3_a6c0i")

[node name="Path2" type="Path2D" parent="WaveManager"]
position = Vector2(29, -27)
curve = SubResource("Curve2D_n7hfa")
script = ExtResource("3_a6c0i")

[node name="Path3" type="Path2D" parent="WaveManager"]
position = Vector2(10, -27)
curve = SubResource("Curve2D_lvk8q")
script = ExtResource("3_a6c0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaveManager"]
position = Vector2(240, 144)
shape = SubResource("CircleShape2D_puy3a")

[node name="Base" type="Area2D" parent="." node_paths=PackedStringArray("cultist_sprites", "cultist4_anim", "cultist5_anim")]
position = Vector2(240, 140)
collision_layer = 0
collision_mask = 2
script = ExtResource("5_twyjn")
cultist_sprites = [NodePath("Cultist1"), NodePath("Cultist2"), NodePath("Cultist3"), NodePath("Cultist4"), NodePath("Cultist5")]
cultist4_anim = NodePath("Cultist4")
cultist5_anim = NodePath("Cultist5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
position = Vector2(-6, 6.5)
shape = SubResource("RectangleShape2D_twsgq")
debug_color = Color(0.92549, 0.231373, 0.356863, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Base"]
texture = ExtResource("9_folpg")
hframes = 14
frame = 3

[node name="Tutorial3" type="Sprite2D" parent="Base"]
visible = false
position = Vector2(31, -29)
texture = ExtResource("10_nse6r")

[node name="WaveCounter" type="Sprite2D" parent="Base"]
position = Vector2(0, 4)
texture = ExtResource("11_8w5if")
hframes = 13

[node name="Cultist1" type="AnimatedSprite2D" parent="Base"]
position = Vector2(26, -9)
sprite_frames = SubResource("SpriteFrames_evmqu")

[node name="Cultist2" type="AnimatedSprite2D" parent="Base"]
position = Vector2(-20, 25)
sprite_frames = SubResource("SpriteFrames_8dk16")

[node name="Cultist3" type="AnimatedSprite2D" parent="Base"]
position = Vector2(20, 23)
sprite_frames = SubResource("SpriteFrames_plu1p")
flip_h = true

[node name="Cultist4" type="AnimatedSprite2D" parent="Base"]
position = Vector2(1, -28)
sprite_frames = SubResource("SpriteFrames_claj0")

[node name="Cultist5" type="AnimatedSprite2D" parent="Base"]
position = Vector2(-25, -9)
sprite_frames = SubResource("SpriteFrames_58k83")
flip_h = true

[node name="GameOver" type="Sprite2D" parent="Base"]
visible = false
z_index = 5
texture = ExtResource("13_cifyv")

[node name="Tutorial" type="Sprite2D" parent="."]
position = Vector2(183, 23)
texture = ExtResource("10_nse6r")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(470, 10)
script = ExtResource("16_l8456")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("16_i6uom")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_w8gsx")

[connection signal="input_event" from="WaveManager" to="WaveManager" method="_on_input_event"]
[connection signal="mouse_entered" from="WaveManager" to="Base" method="_on_wave_manager_mouse_entered"]
[connection signal="mouse_exited" from="WaveManager" to="Base" method="_on_wave_manager_mouse_exited"]
[connection signal="child_exiting_tree" from="WaveManager/Path1" to="WaveManager" method="_on_path_1_child_exiting_tree"]
[connection signal="child_exiting_tree" from="WaveManager/Path2" to="WaveManager" method="_on_path_2_child_exiting_tree"]
[connection signal="child_exiting_tree" from="WaveManager/Path3" to="WaveManager" method="_on_path_3_child_exiting_tree"]
[connection signal="area_entered" from="Base" to="Base" method="_on_area_entered"]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
